--- a/reading_img_computer_vision.ipynb
+++ b/reading_img_computer_vision.ipynb
@@ -2,12 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n"
+    "# Python code to read image\n",
+    "import cv2\n",
+    "\n",
+    "\n",
+    "img = cv2.imread(\"nnn.jpg\", cv2.IMREAD_COLOR)\n",
+    "\n",
+    "cv2.imshow(\"image\", img)\n",
+    "\n",
+    "\n",
+    "cv2.waitKey(0)\n",
+    "\n",
+    "\n",
+    "cv2.destroyAllWindows()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
