--- a/reading_img_computer_vision.ipynb
+++ b/reading_img_computer_vision.ipynb
@@ -26,7 +26,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Fuzzy C Mean\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
   }
  ],
  "metadata": {
@@ -45,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0 | packaged by conda-forge | (main, Jan 14 2023, 12:26:40) [Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
