--- a/Miscellaneous/Learning/01_array_loop.ipynb
+++ b/Miscellaneous/Learning/01_array_loop.ipynb
@@ -1,9 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d6d58e51",
+   "metadata": {},
+   "source": [
+    "# List comprehension\n",
+    "\n",
+    "List comprehensions are a concise way to create a new list based on an existing list."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3497f62f",
+   "execution_count": 1,
+   "id": "038f782f",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "75a46ef0",
+   "id": "e063b97a",
    "metadata": {},
    "outputs": [
     {
@@ -46,8 +56,156 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "b57a8d93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ i for i in range(10) if i>3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "55c9d808",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 12, 3, 4]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i if i>=3 else (i*i*(i+1)) for i in range(5)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "872ce001",
+   "metadata": {},
+   "source": [
+    "## Numpy Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "32bc64aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.arange(1,10)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0304e31d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.reshape(3,3).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "759326e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = a.reshape(3,3)\n",
+    "print(b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4984b9ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3 4]\n",
+      " [5 6 7 8 9]]\n",
+      "[[0 1]\n",
+      " [2 3]\n",
+      " [4 5]\n",
+      " [6 7]\n",
+      " [8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.arange(0,10)\n",
+    "d = c.reshape(2,5)\n",
+    "e = c.reshape(5,2)\n",
+    "print(d)\n",
+    "print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6eff2c12",
+   "id": "4faf6abc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5b8a3dc",
    "metadata": {},
    "outputs": [],
    "source": []
