--- a/Miscellaneous/Learning/01_array_loop.ipynb
+++ b/Miscellaneous/Learning/01_array_loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d6d58e51",
+   "id": "44aeba7a",
    "metadata": {},
    "source": [
     "# List comprehension\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "038f782f",
+   "id": "33b771b2",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e063b97a",
+   "id": "d9de6563",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b57a8d93",
+   "id": "26316ffc",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "55c9d808",
+   "id": "b71c15fb",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "872ce001",
+   "id": "9cb88f2e",
    "metadata": {},
    "source": [
     "## Numpy Array"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "32bc64aa",
+   "id": "4c0ca985",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0304e31d",
+   "id": "22606328",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "759326e0",
+   "id": "8b53f2c0",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4984b9ac",
+   "id": "c20f2c1e",
    "metadata": {},
    "outputs": [
     {
@@ -196,16 +196,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4faf6abc",
+   "execution_count": 25,
+   "id": "c2740f84",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 5 7 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = np.arange(1,10,2)\n",
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e8ab833e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(f))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b21b7218",
+   "metadata": {},
+   "source": [
+    "# N-dim - vis\n",
+    "# Reshape\n",
+    "# axis\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9475137c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 25\n",
+      "Value of a:  10 Value of b:  25\n",
+      "Value of a: 10, Value of b: 25.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Output Formatting in Python\n",
+    "a = 10\n",
+    "b = 25\n",
+    "print(a,b)\n",
+    "print(\"Value of a: \",a,\"Value of b: \",b)\n",
+    "\n",
+    "print(\"Value of a: {first}, Value of b: {second}.\".format(second=b,first=a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f40506ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value of a:10, Value of b:25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Formatted String ->\n",
+    "\n",
+    "print(f\"Value of a:{a}, Value of b:{b}\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5b8a3dc",
+   "id": "1bf59493",
    "metadata": {},
    "outputs": [],
    "source": []
