--- a/Miscellaneous/Learning/03_numpy_aray.ipynb
+++ b/Miscellaneous/Learning/03_numpy_aray.ipynb
@@ -632,6 +632,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4, 11, 12, 13, 14, 15],\n",
+       "       [ 5,  6,  7,  8,  9, 16, 17, 18, 19, 20]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack((a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4, 11, 12, 13],\n",
+       "       [14, 15,  5,  6],\n",
+       "       [ 7,  8,  9, 16],\n",
+       "       [17, 18, 19, 20]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack((a,b)).reshape(5,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
