--- a/Miscellaneous/Learning/04_Pandas_array.ipynb
+++ b/Miscellaneous/Learning/04_Pandas_array.ipynb
@@ -930,7 +930,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(sk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32, 11)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sk.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32 entries, 0 to 31\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   mpg     32 non-null     float64\n",
+      " 1   cyl     32 non-null     int64  \n",
+      " 2   disp    25 non-null     float64\n",
+      " 3   hp      32 non-null     int64  \n",
+      " 4   drat    32 non-null     float64\n",
+      " 5   wt      32 non-null     float64\n",
+      " 6   qsec    32 non-null     float64\n",
+      " 7   vs      32 non-null     int64  \n",
+      " 8   am      32 non-null     int64  \n",
+      " 9   gear    32 non-null     int64  \n",
+      " 10  carb    32 non-null     int64  \n",
+      "dtypes: float64(5), int64(6)\n",
+      "memory usage: 2.9 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "sk.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "DataFrame.info() got an unexpected keyword argument 'null_counts'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\GitHub\\Python\\Miscellaneous\\Learning\\04_Pandas_array.ipynb Cell 15\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/GitHub/Python/Miscellaneous/Learning/04_Pandas_array.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m sk\u001b[39m.\u001b[39;49minfo(null_counts\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: DataFrame.info() got an unexpected keyword argument 'null_counts'"
+     ]
+    }
+   ],
+   "source": [
+    "sk.info(null_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -954,260 +1049,140 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>mpg</th>\n",
-       "      <th>cyl</th>\n",
-       "      <th>disp</th>\n",
-       "      <th>hp</th>\n",
-       "      <th>drat</th>\n",
-       "      <th>wt</th>\n",
-       "      <th>qsec</th>\n",
-       "      <th>vs</th>\n",
-       "      <th>am</th>\n",
-       "      <th>gear</th>\n",
-       "      <th>carb</th>\n",
+       "      <th>int_col</th>\n",
+       "      <th>text_col</th>\n",
+       "      <th>float_col</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>21.0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>110</td>\n",
-       "      <td>3.90</td>\n",
-       "      <td>2.620</td>\n",
-       "      <td>16.46</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>alpha</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>21.0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>110</td>\n",
-       "      <td>3.90</td>\n",
-       "      <td>2.875</td>\n",
-       "      <td>17.02</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>beta</td>\n",
+       "      <td>0.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>22.8</td>\n",
-       "      <td>4</td>\n",
-       "      <td>108.0</td>\n",
-       "      <td>93</td>\n",
-       "      <td>3.85</td>\n",
-       "      <td>2.320</td>\n",
-       "      <td>18.61</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>gamma</td>\n",
+       "      <td>0.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>21.4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>258.0</td>\n",
-       "      <td>110</td>\n",
-       "      <td>3.08</td>\n",
-       "      <td>3.215</td>\n",
-       "      <td>19.44</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>delta</td>\n",
+       "      <td>0.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>18.7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>175</td>\n",
-       "      <td>3.15</td>\n",
-       "      <td>3.440</td>\n",
-       "      <td>17.02</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>18.1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>225.0</td>\n",
-       "      <td>105</td>\n",
-       "      <td>2.76</td>\n",
-       "      <td>3.460</td>\n",
-       "      <td>20.22</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>14.3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>360.0</td>\n",
-       "      <td>245</td>\n",
-       "      <td>3.21</td>\n",
-       "      <td>3.570</td>\n",
-       "      <td>15.84</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>24.4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>146.7</td>\n",
-       "      <td>62</td>\n",
-       "      <td>3.69</td>\n",
-       "      <td>3.190</td>\n",
-       "      <td>20.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>22.8</td>\n",
-       "      <td>4</td>\n",
-       "      <td>140.8</td>\n",
-       "      <td>95</td>\n",
-       "      <td>3.92</td>\n",
-       "      <td>3.150</td>\n",
-       "      <td>22.90</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>19.2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>167.6</td>\n",
-       "      <td>123</td>\n",
-       "      <td>3.92</td>\n",
-       "      <td>3.440</td>\n",
-       "      <td>18.30</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>17.8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>167.6</td>\n",
-       "      <td>123</td>\n",
-       "      <td>3.92</td>\n",
-       "      <td>3.440</td>\n",
-       "      <td>18.90</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>16.4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>275.8</td>\n",
-       "      <td>180</td>\n",
-       "      <td>3.07</td>\n",
-       "      <td>4.070</td>\n",
-       "      <td>17.40</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>17.3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>275.8</td>\n",
-       "      <td>180</td>\n",
-       "      <td>3.07</td>\n",
-       "      <td>3.730</td>\n",
-       "      <td>17.60</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>15.2</td>\n",
-       "      <td>8</td>\n",
-       "      <td>275.8</td>\n",
-       "      <td>180</td>\n",
-       "      <td>3.07</td>\n",
-       "      <td>3.780</td>\n",
-       "      <td>18.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>10.4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>205</td>\n",
-       "      <td>2.93</td>\n",
-       "      <td>5.250</td>\n",
-       "      <td>17.98</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>epsilon</td>\n",
+       "      <td>1.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     mpg  cyl   disp   hp  drat     wt   qsec  vs  am  gear  carb\n",
-       "0   21.0    6  160.0  110  3.90  2.620  16.46   0   1     4     4\n",
-       "1   21.0    6  160.0  110  3.90  2.875  17.02   0   1     4     4\n",
-       "2   22.8    4  108.0   93  3.85  2.320  18.61   1   1     4     1\n",
-       "3   21.4    6  258.0  110  3.08  3.215  19.44   1   0     3     1\n",
-       "4   18.7    8    NaN  175  3.15  3.440  17.02   0   0     3     2\n",
-       "5   18.1    6  225.0  105  2.76  3.460  20.22   1   0     3     1\n",
-       "6   14.3    8  360.0  245  3.21  3.570  15.84   0   0     3     4\n",
-       "7   24.4    4  146.7   62  3.69  3.190  20.00   1   0     4     2\n",
-       "8   22.8    4  140.8   95  3.92  3.150  22.90   1   0     4     2\n",
-       "9   19.2    6  167.6  123  3.92  3.440  18.30   1   0     4     4\n",
-       "10  17.8    6  167.6  123  3.92  3.440  18.90   1   0     4     4\n",
-       "11  16.4    8  275.8  180  3.07  4.070  17.40   0   0     3     3\n",
-       "12  17.3    8  275.8  180  3.07  3.730  17.60   0   0     3     3\n",
-       "13  15.2    8  275.8  180  3.07  3.780  18.00   0   0     3     3\n",
-       "14  10.4    8    NaN  205  2.93  5.250  17.98   0   0     3     4"
+       "   int_col text_col  float_col\n",
+       "0        1    alpha       0.00\n",
+       "1        2     beta       0.25\n",
+       "2        3    gamma       0.50\n",
+       "3        4    delta       0.75\n",
+       "4        5  epsilon       1.00"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sk.head(15)"
+    "int_values = [1, 2, 3, 4, 5]\n",
+    "text_values = ['alpha', 'beta', 'gamma', 'delta', 'epsilon']\n",
+    "float_values = [0.0, 0.25, 0.5, 0.75, 1.0]\n",
+    "df = pd.DataFrame({\"int_col\": int_values, \"text_col\": text_values,\n",
+    "                  \"float_col\": float_values})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   int_col    5 non-null      int64  \n",
+      " 1   text_col   5 non-null      object \n",
+      " 2   float_col  5 non-null      float64\n",
+      "dtypes: float64(1), int64(1), object(1)\n",
+      "memory usage: 248.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   int_col    5 non-null      int64  \n",
+      " 1   text_col   5 non-null      object \n",
+      " 2   float_col  5 non-null      float64\n",
+      "dtypes: float64(1), int64(1), object(1)\n",
+      "memory usage: 248.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Columns: 3 entries, int_col to float_col\n",
+      "dtypes: float64(1), int64(1), object(1)\n",
+      "memory usage: 248.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info(verbose=False)"
    ]
   },
   {
