--- a/Learning/02_function_class_obj.ipynb
+++ b/Learning/02_function_class_obj.ipynb
@@ -350,20 +350,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "175a73c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Everyone !\n",
+      "\n",
+      "Jai Shree Ram\n",
+      "\n",
+      "Jai Shree Krishna\n",
+      "\n",
+      "Jai Hanuman\n",
+      "\n",
+      "Jai Raghunath\n",
+      "\n",
+      "Jai Ganpati \n",
+      "\n",
+      "Jai Mata Dii\n"
+     ]
+    }
+   ],
+   "source": [
+    "#reading line by line\n",
+    "\n",
+    "f = open(\"testfile.txt\",\"r\")\n",
+    "for x in f:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "431f758e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open(\"testfile.txt\",\"a\")\n",
+    "print(f.write(\"Jai Mata Dii\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bab30ca1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Everyone !\n",
+      "\n",
+      "Jai Shree Ram\n",
+      "\n",
+      "Jai Shree Krishna\n",
+      "\n",
+      "Jai Hanuman\n",
+      "\n",
+      "Jai Raghunath\n",
+      "\n",
+      "Jai Ganpati \n",
+      "\n",
+      "Jai Mata Dii\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open(\"testfile.txt\",\"r\")\n",
+    "for x in f:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1f37d775",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open(\"myfile.txt\",\"w\")\n",
+    "f.write(\"Hare Krishna\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2c03382f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hare Krishna\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open(\"myfile.txt\",\"r\")\n",
+    "for x in f:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e58f5709",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#reading line by line"
+    "f.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ac068a3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "os.remove(\"testfile.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bcfd8b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "SuperEnv",
    "language": "python",
-   "name": "superenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
