--- a/Learning/04_Pandas_array.ipynb
+++ b/Learning/04_Pandas_array.ipynb
@@ -5810,12 +5810,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32 entries, 0 to 31\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   Model Name  32 non-null     object \n",
+      " 1   mpg         32 non-null     float64\n",
+      " 2   cyl         32 non-null     int64  \n",
+      " 3   disp        32 non-null     float64\n",
+      " 4   hp          32 non-null     int64  \n",
+      " 5   drat        32 non-null     float64\n",
+      " 6   wt          32 non-null     float64\n",
+      " 7   qsec        32 non-null     float64\n",
+      " 8   vs          32 non-null     int64  \n",
+      " 9   am          32 non-null     int64  \n",
+      " 10  gear        32 non-null     int64  \n",
+      " 11  carb        32 non-null     int64  \n",
+      "dtypes: float64(5), int64(6), object(1)\n",
+      "memory usage: 3.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#So change mpg from string to float to perform corellation\n",
+    "\n",
+    "cars.mpg = cars.mpg.astype(float)\n",
+    "\n",
+    "#See the cases\n",
+    "cars.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#So chang mpg from "
-   ]
+   "source": []
   }
  ],
  "metadata": {
