Update 03c_Pandas_DataFrame_To_List .ipynb

--- a/Learning/03c_Pandas_DataFrame_To_List .ipynb
+++ b/Learning/03c_Pandas_DataFrame_To_List .ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## tolist() function in DataFrame"
+    "## tolist() function in DataFrame\n",
+    "\n",
+    "With the help of numpy.ndarray.tolist() method, we can have the list of data elements which is converted from an ndarray using ndarray.tolist() method."
    ]
   },
   {
